--- a/.github/workflows/socket-scan.yaml
+++ b/.github/workflows/socket-scan.yaml
@@ -1,49 +1,65 @@
-# .github/workflows/socket-scan.yml
-name: Socket Scan
+# Socket Security GitHub Actions Workflow
+name: socket-security-workflow
+run-name: Socket Security Github Action
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ['**']
   pull_request:
-  workflow_dispatch:
+    types: [opened, synchronize, reopened]
+  issue_comment:
+    types: [created]
+
+concurrency:
+  group: socket-scan-${{ github.ref }}-${{ github.sha }}
+  cancel-in-progress: true
 
 jobs:
-  scan:
-    runs-on: ubuntu-latest
+  socket-security:
     permissions:
+      issues: write
       contents: read
+      pull-requests: write
+    runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
         with:
-          node-version: "20"
+          fetch-depth: ${{ github.event_name == 'pull_request' && 2 || 0 }}
 
-      - name: Install Socket CLI
-        run: npm install -g socket
+      # --- Reachability only: writes .socket.facts.json, does NOT submit ---
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20'
 
-      - name: Run Socket scan
-        env:
-          SOCKET_SECURITY_API_TOKEN: ${{ secrets.SOCKET_SECURITY_API_TOKEN }}
-          SOCKET_ORG_SLUG: ${{ vars.SOCKET_ORG_SLUG }}
+      - name: Run reachability (npm CLI) -> produce .socket.facts.json
         run: |
-          if [ -z "${SOCKET_SECURITY_API_TOKEN}" ]; then
-            echo "::error::Missing SOCKET_SECURITY_API_TOKEN secret"
-            exit 1
-          fi
-          socket scan create \
-            --reach \
-            --org "${SOCKET_ORG_SLUG}" \
-            --repo "${GITHUB_REPOSITORY##*/}" \
-            --branch "${GITHUB_HEAD_REF:-${GITHUB_REF_NAME}}" \
-            --json \
-            . | tee scan_report.json
+          npx -y socket@latest scan reach
+          test -f .socket.facts.json && echo "Reachability facts generated."
 
-      - name: Upload scan results
-        uses: actions/upload-artifact@v4
+      # --- Python CLI: submit scan using the facts file ---
+      - uses: actions/setup-python@v5
         with:
-          name: socket-scan-report
-          path: scan_report.json
+          python-version: '3.12'
+
+      - name: Install Socket Python CLI
+        run: pip install --upgrade socketsecurity
+
+      - name: Run Socket Security Scan (Python CLI using facts)
+        env:
+          SOCKET_SECURITY_API_KEY: ${{ secrets.SOCKET_SECURITY_API_KEY }}
+          GH_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          PR_NUMBER=0
+          if [ "${{ github.event_name }}" = "pull_request" ]; then
+            PR_NUMBER=${{ github.event.pull_request.number }}
+          elif [ "${{ github.event_name }}" = "issue_comment" ]; then
+            PR_NUMBER=${{ github.event.issue.number }}
+          fi
+
+          # Explicitly pass facts file (auto-detect also works, this is clearer)
+          socketcli \
+            --target-path "$GITHUB_WORKSPACE" \
+            --scm github \
+            --pr-number "$PR_NUMBER" \
+            --facts-file ".socket.facts.json"
