--- a/.github/workflows/Blackduck_workflow.yml
+++ b/.github/workflows/Blackduck_workflow.yml
@@ -23,39 +23,39 @@ jobs:
         
         
       with:
-        ### SCANNING: Required fields
-        blackducksca_url: ${{ vars.BLACKDUCK_URL }}
-        blackducksca_token: ${{ secrets.BLACKDUCK_TOKEN }}
-        
-        ### SCANNING: Optional fields
-        blackducksca_scan_failure_severities: 'BLOCKER,CRITICAL'
+          ### SCANNING: Required fields
+          blackducksca_url: ${{ vars.BLACKDUCK_URL }}
+          blackducksca_token: ${{ secrets.BLACKDUCK_TOKEN }}
 
-        #         ### FIX PULL REQUEST CREATION: Uncomment below to enable
-        blackducksca_fixpr_enabled: true
-        blackducksca_fixpr_maxCount: 2
-        blackducksca_fixpr_filter_severities: 'Critical,High'
-        blackducksca_fixpr_useUpgradeGuidance: 'SHORT_TERM,LONG_TERM'
-        github_token: ${{ secrets.GIT_PAT_TOKEN }} # Required when Fix PRs is enabled
+          ### SCANNING: Optional fields
+          blackducksca_scan_failure_severities: 'BLOCKER,CRITICAL'
 
-                ### PULL REQUEST COMMENTS: Uncomment below to enable
-         blackducksca_prcomment_enabled: true 
-        # github_token: ${{ secrets.GITHUB_TOKEN }} # Required when PR comments is enabled
+          ### FIX PULL REQUEST CREATION: Uncomment below to enable
+          blackducksca_fixpr_enabled: true
+          blackducksca_fixpr_maxCount: 2
+          blackducksca_fixpr_filter_severities: 'Critical,High'
+          blackducksca_fixpr_useUpgradeGuidance: 'SHORT_TERM,LONG_TERM'
+          github_token: ${{ secrets.GIT_PAT_TOKEN }} # Required when Fix PRs is enabled
 
-        #         ### SARIF report generation and upload to GitHub Adavanced Security: Uncomment below to enable
-         blackducksca_reports_sarif_create: true # Create Black Duck SCA SARIF report and upload it as artifact
-        # blackducksca_upload_sarif_report: true  # Upload Black Duck SCA SARIF report in GitHub Advanced Security tab
-        # github_token: ${{ secrets.GITHUB_TOKEN }} # Required when blackducksca_upload_sarif_report is set as true
+          ### PULL REQUEST COMMENTS: Uncomment below to enable
+          blackducksca_prcomment_enabled: true
+          # github_token: ${{ secrets.GITHUB_TOKEN }} # Required when PR comments is enabled
 
-                ### Mark build status if policy violating issues are found
-        # mark_build_status: 'success'
+          ### SARIF report generation and upload to GitHub Adavanced Security: Uncomment below to enable
+          blackducksca_reports_sarif_create: true # Create Black Duck SCA SARIF report and upload it as artifact
+          # blackducksca_upload_sarif_report: true  # Upload Black Duck SCA SARIF report in GitHub Advanced Security tab
+          # github_token: ${{ secrets.GITHUB_TOKEN }} # Required when blackducksca_upload_sarif_report is set as true
 
-                ### To enabable self-signed certificates. 
-        #network_ssl_trustAll: true
-        #network_ssl_cert_file: '/Users/Config/cert.pem'
+          ### Mark build status if policy violating issues are found
+          # mark_build_status: 'success'
 
-                ### Uncomment below configuration to add custom logic based on return status
-        # - name: cmdLine
-        #   id: cmdLine
-        #   run: |
-        #     EXIT_CODE=${{ steps.black-duck-security-scan.outputs.status }}
-        #     echo "Black Duck Security Scan exit status - $EXIT_CODE"
+          ### To enabable self-signed certificates. 
+          #network_ssl_trustAll: true
+          #network_ssl_cert_file: '/Users/Config/cert.pem'
+
+          ### Uncomment below configuration to add custom logic based on return status
+          # - name: cmdLine
+          #   id: cmdLine
+          #   run: |
+          #     EXIT_CODE=${{ steps.black-duck-security-scan.outputs.status }}
+          #     echo "Black Duck Security Scan exit status - $EXIT_CODE"
