--- a/.github/workflows/Smiplification_Polaris_Demo.yml
+++ b/.github/workflows/Smiplification_Polaris_Demo.yml
@@ -44,7 +44,7 @@ jobs:
         #polaris_test_sca_type: "SCA-SIGNATURE"
 
                 ### Mark build status if policy violating issues are found
-        # mark_build_status: 'success'
+        mark_build_status: 'success'
 
                 ### Uncomment below configuration to add custom logic based on return status
         # - name: cmdLine
