--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,8 @@
             coverity_url: ${{ secrets.COVERITY_CLASSIC_URL }}
             coverity_user: ${{ secrets.COVERITY_USER }}
             coverity_passphrase: ${{ secrets.COVERITY_CLASSIC_PWD }}
-            coverity_project_name: "Coverity_Connect_Project_1"
-            coverity_stream_name: "Coverity_Connect_Stream_1"
+            coverity_project_name: "Coverity_Local_Project_1"
+            coverity_stream_name: "Coverity_Local_Stream_1"
             coverity_local: true
 
             ### POLICY ENFORCEMENT: Uncomment to break build on policy
